# Trabalho1EsD3

./: CMakeLists.txt  main.c
auxiliar/: aux_arquivos.c  aux_arquivos.h  aux_funcoes.c  aux_funcoes.h  aux_geral.c  aux_geral.h  defs.h  teste.c
