cmake_minimum_required(VERSION 3.25)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c auxiliar/aux_arquivos.h auxiliar/aux_arquivos.h auxiliar/aux_arquivos.c auxiliar/aux_arquivos.c auxiliar/aux_funcoes.c auxiliar/aux_funcoes.h auxiliar/aux_funcoes.h auxiliar/defs.h auxiliar/defs.h auxiliar/aux_geral.c auxiliar/aux_geral.h)
